deploy/k8s/web/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubernator
  labels:
    app.kubernetes.io/name: kubernator
    app.kubernetes.io/part-of: kubernator
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
